chore: test note fetching
